# portfolio

./: README.txt
smart-calculator/: README.md  codecov.yml  docker-compose.yaml  pyproject.toml  setup.cfg
smart-calculator/.mypy_cache/3.9/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _dummy_thread.data.json  _dummy_thread.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _markupbase.data.json  _markupbase.meta.json  _thread.data.json  _thread.meta.json  _tkinter.data.json  _tkinter.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  atexit.data.json  atexit.meta.json  bdb.data.json  bdb.meta.json  bisect.data.json  bisect.meta.json  builtins.data.json  builtins.meta.json  cmd.data.json  cmd.meta.json  (+128 more)
smart-calculator/calculator/_helpers/: gcd.py
smart-calculator/calculator/core/: __init__.py  add.py  basic.py  div.py  exceptions.py  expr.py  mul.py  neg.py  nroot.py  pow.py  relational.py
smart-calculator/calculator/solver/: heuristics.py  simplify.py  solve_equation.py  solver.py
smart-calculator/calculator/tree/: tree.py
smart-calculator/docker/: Dockerfile
smart-calculator/tests/: _shortcuts.py
smart-calculator/tests/core/: test_add.py  test_basic.py  test_div.py  test_mul.py  test_neg.py  test_nroot.py  test_relational.py
(+739 files in other folders)
